<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_list">There is no todo. Please create a new todo.</string>
    <string name="add_todo">add</string>
    <string name="new_todo">New ToDo</string>
    <string name="todo_title">Title</string>
    <string name="todo_text">ToDo</string>
    <string name="create_todo">Create ToDo</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="img_edit">edit</string>
    <string name="action_delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="answer_no">No</string>
    <string name="answer_yes">Yes</string>
    <string name="action_edit">Edit</string>
    <string name="date">Select a date</string>
    <string name="time">Pick a time</string>
    <string name="todo_list">TODO LIST</string>
    <string name="detail_label">DETAIL</string>
    <string name="create_label">NEW TODO</string>
</resources>